--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,5 +19,7 @@ jobs:
       - name: 도커 이미지 빌드 및 푸시
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker build -t ${{ secrets.DOCKER_REPO }}:1.0.1 .
+          docker push ${{ secrets.DOCKER_REPO }}:1.0.1
           docker build -t ${{ secrets.DOCKER_REPO }}:latest .
           docker push ${{ secrets.DOCKER_REPO }}:latest
